fix-scrollbar

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -229,6 +229,10 @@
       .messages{
         padding: 10px;
         height: calc(100% - 140px);
+        overflow-y: scroll;
+        &::-webkit-scrollbar{
+          display: none;
+        }
 
         .message{
           display: flex;
